[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "duots"
version = "0.1.1"
authors = []
readme = "README.md"
dependencies = []

[project.urls]
Repository = "git@github.com:4d30/duots"

[tool.ross]
language = "python"
dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
